# mock_api

./: .env-example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: config.py  main.py
app/api/: router.py
app/api/common/schemas/: base_root_schema.py  base_schema.py  info_response_schema.py
app/api/dependencies/: __init__.py  dao_deps.py  processor_service_deps.py  proxy_deps.py  session_deps.py  setter_data_deps.py  setter_deps.py  settings_deps.py
app/api/extra_api/controllers/: healthcheck.py
app/api/fastapi_middlewares/: logging_middleware.py
app/api/processor/: __init__.py
app/api/processor/controllers/: __init__.py
app/api/processor/schemas/: __init__.py
app/api/processor/services/: __init__.py  processor_service.py
app/api/processor/utils/: __init__.py  processor_exception_handler.py  processor_exceptions.py
app/api/proxy/services/: proxy_service.py
app/api/setter/: enums.py
app/api/setter/controllers/: setter_data_controller.py
app/api/setter/schemas/: setter_data_response_schema.py
app/api/setter/services/: setter_data_service.py  setter_service.py
app/api/settings/: endpoint_types_enum.py
app/api/settings/controllers/: processor_settings_controller.py  proxy_settings_controller.py  setter_settings_controller.py
app/api/settings/services/: connection_emulation_service.py  processor_settings_service.py  proxy_settings_service.py  setter_settings_service.py
app/db/: session.py
app/db/dao/: base_dao.py  settings_dao.py
app/db/dao/processor_dao/: __init__.py  processor_post_modes_dao.py  processor_request_dao.py  processor_settings_dao.py  processor_status_mode_steps_dao.py  processor_status_modes_dao.py
app/db/dao/proxy_dao/: proxy_request_dao.py  proxy_settings_dao.py
app/db/dao/setter_dao/: __init__.py  setter_request_dao.py  setter_settings_dao.py
app/db/models/: __init__.py  base_models.py
app/db/models/processor_schema/: __init__.py  processor_post_mode_model.py  processor_request_model.py  processor_settings_model.py  processor_status_mode_models.py
app/db/models/proxy_schema/: proxy_request_model.py  proxy_settings_model.py
app/db/models/setter_schema/: __init__.py  setter_request_model.py  setter_settings_model.py
app/db/schemas/insert/: processor_request_insert_schema.py
app/db/schemas/select/: processor_full_config_schema.py  processor_post_modes_schema.py  processor_request_and_status_steps_schema.py  processor_request_schema.py  processor_settings_schema.py  processor_status_mode_steps_schema.py  processor_status_modes_schema.py
app/scheduler/: factories.py  processor_scheduler_service.py  proxy_data_scheduler_service.py  setter_data_scheduler_service.py  start_main_scheduler.py
app/utils/: docstrings.py  logger_setup.py
dashboards/: README.md  mock_api_base.json
docs/: RELEASE.md
docs/examples/: httpx_quickstart.py
docs/examples/postman/: mock_api.postman_collection.json
docs/openapi/: README.md  openapi.v1.json
migrations/: README.md  env.py  script.py.mako
migrations/versions/: 2026_04_17_add_setter_schema.py  2026_04_18_add_processor_schema.py  2026_04_19_add_proxy_schema.py
scripts/: export_openapi.py
src/: index.js  paths.js  request-handler.js
tests/: README.md  conftest.py  test_main.py
tests/api/contract/: test_public_api_contract.py
tests/api/data/controllers/: conftest.py  test_data_controllers.py  test_data_controllers_api.py
tests/api/dependencies/: __init__.py  test_proxy_deps.py
tests/api/extra_api/controllers/: test_healthcheck.py
tests/api/fastapi_middlewares/: test_logging_middleware.py
tests/api/processor/services/: test_processor_service.py
tests/api/proxy/: conftest.py
tests/api/proxy/controllers/: test_upload_controller.py
tests/api/proxy/services/: test_upload_service.py
tests/api/setter/controllers/: conftest.py  test_setter_controller_api.py
tests/api/setter/services/: test_setter_service.py
tests/api/settings/controllers/: conftest.py  test_processor_settings_controller.py  test_processor_settings_controller_api.py  test_proxy_settings_controller.py  test_proxy_settings_controller_api.py  test_setter_settings_controller.py  test_setter_settings_controller_api.py
tests/api/settings/services/: test_connection_emulation_service.py  test_proxy_settings_service.py
tests/api/smoke/: test_public_smoke_e2e.py
tests/db/dao/: conftest.py  test_base_dao.py
tests/db/dao/processor_dao/: test_processor_post_modes_dao.py  test_processor_request_dao.py  test_processor_settings_dao.py  test_processor_status_mode_steps_dao.py  test_processor_status_modes_dao.py
tests/db/dao/proxy_dao/: test_proxy_request_dao.py  test_proxy_settings_dao.py
tests/db/dao/setter_dao/: test_setter_request_dao.py  (+1 more)
tests/helpers/: mock_task_helper.py
tests/scheduler/: test_scheduler.py
(+30 files in other folders)
